# DreamLoop

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  PROJECT_CONTEXT.md  README.md  README.zh-CN.md  design-qa.md  docker-compose.yml  frontend-refinement-plan.md  pyproject.toml
.github/workflows/: ci.yml  docker.yml  publish.yml
docs/: demo-recording.md
docs/superpowers/plans/: 2026-06-18-bedside-amber-frontend.md  2026-06-22-website-product-visuals.md  2026-07-14-frontend-typography-language-draft-flow.md
docs/superpowers/specs/: 2026-06-18-bedside-amber-frontend-design.md  2026-07-14-frontend-visual-hierarchy-refinement.md
scripts/: start-dreamloop.cmd
src/dreamloop/: __init__.py  analysis.py  cli.py  core.py  database.py  demo_data.py  export_markdown.py  graph.py  images.py  importers.py  schema.py  visuals.py  web.py
src/dreamloop/static/: style.css
src/dreamloop/static/fonts/cascadia/: OFL.txt
src/dreamloop/templates/: detail.html  index.html
tests/: test_ai_config.py  test_cli.py  test_core_workflow.py  test_export_markdown.py  test_packaging_release.py  test_readme_positioning.py  test_web_api.py
