[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "dreamloop"
version = "0.1.0"
description = "A local-first AI dream journal for people who want to notice patterns in their dreams."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "DreamLoop contributors" }]
dependencies = [
    "fastapi>=0.115",
    "httpx>=0.27",
    "jinja2>=3.1",
    "openai>=1.50",
    "python-multipart>=0.0.9",
    "typer>=0.12",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
ai = ["chromadb>=0.5"]
dev = ["pytest>=8.3", "pytest-cov>=5.0"]

[project.scripts]
dreamloop = "dreamloop.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.hatch.build.targets.wheel]
packages = ["src/dreamloop"]
